--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,32 +2,34 @@ html
   head
     title= title
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css", integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7", crossorigin="anonymous")
+    block header
   body
     nav.navbar.navbar-default( role="navigation" )
-      .navbar-header
-        button.navbar-toggle.collapsed( type="button", data-toggle="collapse", data-target="#navbar-inverse", aria-expanded="false", aria-controls="navbar")
-          span.sr-only Toggle navigation
-          span.icon-bar
-          span.icon-bar
-          span.icon-bar
-        a.navbar-brand(href="#") #{project.name}
+      .container
+        .navbar-header
+          button.navbar-toggle.collapsed( type="button", data-toggle="collapse", data-target="#navbar-inverse", aria-expanded="false", aria-controls="navbar")
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href="#") 
 
-      #navbar-inverse.collapse.navbar-collapse
-        ul.nav.navbar-nav
-          li.active: a( href="#") Home
-          li: a( href="#about" ) About
-          li: a( href="#contact" ) Contact
-          li.dropdown
-            a.dropdown-toggle( href="#", data-toggle="dropdown", role="button", aria-expanded="false" ) Dropdown 
-                span.caret
-            ul.dropdown-menu( role="menu" )
-                li: a( href="#" ) Action
-                li: a( href="#" ) Another action
-                li: a( href="#" ) Something else here
-                li.divider
-                li.dropdown-header Nav header
-                li: a( href="#" ) Separated link
-                li: a( href="#" ) One more separated link
+        #navbar-inverse.collapse.navbar-collapse
+          ul.nav.navbar-nav
+            li.active: a( href="/") Home
+            li: a( href="#about" ) Trip Planner
+            li: a( href="/plans" ) Trip Plans
+            li.dropdown
+              a.dropdown-toggle( href="#", data-toggle="dropdown", role="button", aria-expanded="false" ) Dropdown 
+                  span.caret
+              ul.dropdown-menu( role="menu" )
+                  li: a( href="#" ) Action
+                  li: a( href="#" ) Another action
+                  li: a( href="#" ) Something else here
+                  li.divider
+                  li.dropdown-header Nav header
+                  li: a( href="#" ) Separated link
+                  li: a( href="#" ) One more separated link
     block content
 
     script(src="https://code.jquery.com/jquery-1.12.2.min.js", integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=", crossorigin="anonymous")
