added files to test Google API

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,8 +28,11 @@ html
                 li.dropdown-header Nav header
                 li: a( href="#" ) Separated link
                 li: a( href="#" ) One more separated link
+    
     block content
 
     script(src="https://code.jquery.com/jquery-1.12.2.min.js", integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=", crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js", integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS",crossorigin="anonymous")
+    
+    block scriptcontent
     
