add login and sign up page

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -34,8 +34,8 @@ html
                   li: a( href="#" ) One more separated link
           ul.nav.navbar-nav.navbar-right
             //TODO: login system
-            li: a( href="") Login
-            li: a( href="") Sign Up
+            li: a( href="/login") Login
+            li: a( href="/register") Sign Up
             li.dropdown
               a.dropdown-toggle( href="#", data-toggle="dropdown", role="button", aria-expanded="false" ) Upload
                 span.caret
