solve css overwrite

--- a/views/plans.jade
+++ b/views/plans.jade
@@ -5,7 +5,8 @@ block header
   //import google icon font
   link(rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons")
   //import Materialize.css
-  link(rel="stylesheet" href="stylesheets/materialize.min.css" media="screen,projection")
+  //link(rel="stylesheet" href="stylesheets/materialize.min.css" media="screen,projection")
+  
 
 block content
   #card.row
