--- a/public/stylesheets/materialize.css
+++ b/public/stylesheets/materialize.css
@@ -3169,11 +3169,11 @@ span.badge.new:after {
   content: " new";
 }
 
-nav ul a span.badge {
+/*nav ul a span.badge {
   position: static;
   margin-left: 4px;
   line-height: 0;
-}
+}*/
 
 .video-container {
   position: relative;
@@ -7302,7 +7302,7 @@ nav ul a span.badge {
   }
 }
 
-nav {
+/**nav {
   color: #fff;
   background-color: #ee6e73;
   width: 100%;
@@ -7478,6 +7478,7 @@ nav .input-field label.active {
     height: 64px;
   }
 }
+**/
 
 @font-face {
   font-family: "Roboto";
